--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,13 +1,13 @@
 site_name: Pembahasan OSK 2015
 pages:
 - [index.md, Home]
-- ["soal 01.md", Soal 01]
-- ["soal 02.md", Soal 02]
-- ["soal 03.md", Soal 03]
-- ["soal 04.md", Soal 04]
-- ["soal 05.md", Soal 05]
-- ["soal 06.md", Soal 06]
-- ["soal 07.md", Soal 07]
-- ["soal 08.md", Soal 08]
-- ["soal 09.md", Soal 09]
-- ["soal 10.md", Soal 10]
+- ["Soal 01.md", Soal 01]
+- ["Soal 02.md", Soal 02]
+- ["Soal 03.md", Soal 03]
+- ["Soal 04.md", Soal 04]
+- ["Soal 05.md", Soal 05]
+- ["Soal 06.md", Soal 06]
+- ["Soal 07.md", Soal 07]
+- ["Soal 08.md", Soal 08]
+- ["Soal 09.md", Soal 09]
+- ["Soal 10.md", Soal 10]
