--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,3 +12,12 @@ pages:
 - ["Soal 09.md", Soal 09]
 - ["Soal 10.md", Soal 10]
 - ["Soal 11.md", Soal 11]
+- ["Soal 12.md", Soal 12]
+- ["Soal 13.md", Soal 13]
+- ["Soal 14.md", Soal 14]
+- ["Soal 15.md", Soal 15]
+- ["Soal 16.md", Soal 16]
+- ["Soal 17.md", Soal 17]
+- ["Soal 18.md", Soal 18]
+- ["Soal 19.md", Soal 19]
+- ["Soal 20.md", Soal 20]
