--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,23 +1,23 @@
 site_name: Pembahasan OSK 2015
 pages:
-- [index.md, Home]
-- ["Soal 01.md", Soal 01]
-- ["Soal 02.md", Soal 02]
-- ["Soal 03.md", Soal 03]
-- ["Soal 04.md", Soal 04]
-- ["Soal 05.md", Soal 05]
-- ["Soal 06.md", Soal 06]
-- ["Soal 07.md", Soal 07]
-- ["Soal 08.md", Soal 08]
-- ["Soal 09.md", Soal 09]
-- ["Soal 10.md", Soal 10]
-- ["Soal 11.md", Soal 11]
-- ["Soal 12.md", Soal 12]
-- ["Soal 13.md", Soal 13]
-- ["Soal 14.md", Soal 14]
-- ["Soal 15.md", Soal 15]
-- ["Soal 16.md", Soal 16]
-- ["Soal 17.md", Soal 17]
-- ["Soal 18.md", Soal 18]
-- ["Soal 19.md", Soal 19]
-- ["Soal 20.md", Soal 20]
+- [index.md, "Home"]
+- ["Soal 01.md", "Soal 01"]
+- ["Soal 02.md", "Soal 02"]
+- ["Soal 03.md", "Soal 03"]
+- ["Soal 04.md", "Soal 04"]
+- ["Soal 05.md", "Soal 05"]
+- ["Soal 06.md", "Soal 06"]
+- ["Soal 07.md", "Soal 07"]
+- ["Soal 08.md", "Soal 08"]
+- ["Soal 09.md", "Soal 09"]
+- ["Soal 10.md", "Soal 10"]
+- ["Soal 11.md", "Soal 11"]
+- ["Soal 12.md", "Soal 12"]
+- ["Soal 13.md", "Soal 13"]
+- ["Soal 14.md", "Soal 14"]
+- ["Soal 15.md", "Soal 15"]
+- ["Soal 16.md", "Soal 16"]
+- ["Soal 17.md", "Soal 17"]
+- ["Soal 18.md", "Soal 18"]
+- ["Soal 19.md", "Soal 19"]
+- ["Soal 20.md", "Soal 20"]
