--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,3 +23,23 @@ pages:
 - ["Soal 18.md", "Soal 18"]
 - ["Soal 19.md", "Soal 19"]
 - ["Soal 20.md", "Soal 20"]
+- ["Soal 21.md", "Soal 21"]
+- ["Soal 22.md", "Soal 22"]
+- ["Soal 23.md", "Soal 23"]
+- ["Soal 24.md", "Soal 24"]
+- ["Soal 25.md", "Soal 25"]
+- ["Soal 26.md", "Soal 26"]
+- ["Soal 27.md", "Soal 27"]
+- ["Soal 28.md", "Soal 28"]
+- ["Soal 29.md", "Soal 29"]
+- ["Soal 30.md", "Soal 30"]
+- ["Soal 31.md", "Soal 31"]
+- ["Soal 32.md", "Soal 32"]
+- ["Soal 33.md", "Soal 33"]
+- ["Soal 34.md", "Soal 34"]
+- ["Soal 35.md", "Soal 35"]
+- ["Soal 36.md", "Soal 36"]
+- ["Soal 37.md", "Soal 37"]
+- ["Soal 38.md", "Soal 38"]
+- ["Soal 39.md", "Soal 39"]
+- ["Soal 40.md", "Soal 40"]
